@@ -1,5 +1,7 @@
 Post-v20.09.0
 ---------------------
+   - The "datapath" argument to ovn-trace is now optional, since the
+     datapath can be inferred from the inport (which is required).
 
 
 OVN v20.09.0 - 28 Sep 2020
